<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseClass">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="355dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:text="@string/sectionClass"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckedTextView
        android:id="@+id/ctv1"
        android:layout_width="353dp"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:checkMark="?android:attr/textCheckMark"
        android:text="@string/class1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="349dp"
        android:layout_height="70dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctv1">

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:text="@string/timeRb1" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/timeRb2" />
    </RadioGroup>

    <CheckedTextView
        android:id="@+id/ctv2"
        android:layout_width="353dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:checkMark="?android:attr/textCheckMark"
        android:text="@string/class2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="349dp"
        android:layout_height="70dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctv2">

        <RadioButton
            android:id="@+id/rb3"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:text="@string/timeRb3" />

        <RadioButton
            android:id="@+id/rb4"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/timeRb4" />
    </RadioGroup>

    <CheckedTextView
        android:id="@+id/ctv3"
        android:layout_width="353dp"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:checkMark="?android:attr/textCheckMark"
        android:text="@string/class3"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="349dp"
        android:layout_height="70dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctv3">

        <RadioButton
            android:id="@+id/rb5"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:text="@string/timeRb5" />

        <RadioButton
            android:id="@+id/rb6"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/timeRb6" />
    </RadioGroup>

    <CheckedTextView
        android:id="@+id/ctv4"
        android:layout_width="353dp"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:checkMark="?android:attr/textCheckMark"
        android:text="@string/class4"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="349dp"
        android:layout_height="70dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctv4">

        <RadioButton
            android:id="@+id/rb7"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:text="@string/timeRb2" />

        <RadioButton
            android:id="@+id/rb8"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/timeRb5" />
    </RadioGroup>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="44dp"
        android:text="@string/btnNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup4" />

</androidx.constraintlayout.widget.ConstraintLayout>