<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Summary">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelNextSem"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="285dp" />

    <TextView
        android:id="@+id/txtBirthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="131dp" />

    <TextView
        android:id="@+id/txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="83dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelPhone"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="83dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelBirthdate"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="131dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelStudent"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="41dp" />

    <TextView
        android:id="@+id/txtDegree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="177dp" />

    <TextView
        android:id="@+id/txtMajor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="231dp" />

    <TextView
        android:id="@+id/txtStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="41dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelDegreePlan"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="177dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelMajor"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="231dp" />

    <EditText
        android:id="@+id/txtClassSchedule"
        android:layout_width="346dp"
        android:layout_height="310dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="353dp" />

</androidx.constraintlayout.widget.ConstraintLayout>