<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainClassList">

    <Spinner
        android:id="@+id/spnCertificate"
        android:layout_width="168dp"
        android:layout_height="25dp"
        android:layout_marginTop="24dp"
        android:entries="@array/lstCertificate"
        app:layout_constraintEnd_toStartOf="@+id/spnDegree"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swDegreeCert" />

    <TextView
        android:id="@+id/lblCertificate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txtCert"
        app:layout_constraintEnd_toStartOf="@+id/lblDegree"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnCertificate" />

    <EditText
        android:id="@+id/idYear"
        android:layout_width="92dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:hint="@string/txtYear"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idPhone" />

    <EditText
        android:id="@+id/idLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/idFirstName"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/idFirstName"
        android:layout_width="174dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/vwPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/txtPhone"
        app:layout_constraintEnd_toStartOf="@+id/idPhone"
        app:layout_constraintHorizontal_bias="0.377"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vwFristName" />

    <TextView
        android:id="@+id/vwDOB"
        android:layout_width="76dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtDOB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vwPhone" />

    <EditText
        android:id="@+id/idPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="72dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vwLastName" />

    <Spinner
        android:id="@+id/idMonth"
        android:layout_width="99dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:entries="@array/txtMonth"
        app:layout_constraintStart_toEndOf="@+id/vwDOB"
        app:layout_constraintTop_toBottomOf="@+id/idPhone" />

    <TextView
        android:id="@+id/vwFristName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/txtFirstName"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/vwLastName"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idFirstName" />

    <TextView
        android:id="@+id/vwLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="156dp"
        android:text="@string/txtLastName"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idLastName" />

    <EditText
        android:id="@+id/idDay"
        android:layout_width="96dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/txtDay"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/idYear"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toEndOf="@+id/idMonth"
        app:layout_constraintTop_toBottomOf="@+id/idPhone" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txtCert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vwDOB" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txtTwoYr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toEndOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/idDay" />

    <Switch
        android:id="@+id/swDegreeCert"
        android:layout_width="394dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:checked="true"
        android:enabled="false"
        android:foregroundGravity="left"
        android:showText="true"
        android:splitTrack="false"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textAlignment="center"
        android:textDirection="firstStrongLtr"
        android:textOff="@string/txtCert"
        android:textOn="@string/txtTwoYr"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21"
        tools:checked="true" />

    <Spinner
        android:id="@+id/spnDegree"
        android:layout_width="170dp"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:entries="@array/lstMajor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swDegreeCert" />

    <TextView
        android:id="@+id/lblDegree"
        android:layout_width="50dp"
        android:layout_height="21dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="132dp"
        android:text="@string/txtMajor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/spnDegree"
        app:layout_constraintTop_toBottomOf="@+id/spnDegree" />

    <Button
        android:id="@+id/btnNextMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/txtNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.792"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnDegree" />

</androidx.constraintlayout.widget.ConstraintLayout>